# jarvis

./: .gitignore  LICENSE  README.md  aaaaaaa.md  config.py  example.txt  improved_usage.py  main.py  pyproject.toml  say_and_repeat.py  talk_and_read.py  test_all_tools.py  test_imports.py  test_multi_tool.py  test_processor_approaches.py
.github/instructions/: Python-coder.instructions.md
browser_controlling_agent/: .env.example  README.md  example_usage.py  main.py
browser_controlling_agent/examples/: enhanced_usage.py
browser_controlling_agent/src/browser_agent/: __init__.py  __main__.py  agent.py  config.py  error_handling.py  orchestrator.py  performance.py  runner.py  search_engines.py  tools.py  tools_old.py.backup  user_experience.py
browser_controlling_agent/src/browser_agent/agents/: __init__.py  agent.py  critique_agent.py  planner_agent.py
browser_controlling_agent/src/browser_agent/tools/: README.md  __init__.py  driver.py  interactions.py  navigation.py  page_content.py  scrolling.py  search.py  utilities.py
mcp_agent/: client.py  pyproject.toml  server.py
playwright_agent/: __init__.py  config.py  improved_usage.py  search_engines.py
playwright_agent/agents/: __init__.py  improved_agent.py
playwright_agent/core/: __init__.py  adaptive_retry.py  async_browser.py  vision_analyzer.py
tools/: __init__.py  base.py  calculator_tool.py  datetime_tool.py  example_tool.py  gmail_tool.py  playwright_tool.py  processor.py  routing.py  search_tool.py
voice/: __init__.py  stt.py  tts.py
(+5 files in other folders)
