[project]
name = "aa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-whisper==20250625",
    "pipwin==0.5.2",
    "pocketsphinx==5.0.4",
    "pyaudio==0.2.14",
    "pyttsx3==2.99",
    "soundfile==0.13.1",
    "speechrecognition==3.14.3",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]
